<resources>
    <string name="app_name">Smart Restaurant</string>
    <string name="login_here">Login here</string>
    <string name="register_here">Register here</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone number (07********)</string>
    <string name="phone_number_num">Phone number</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="back_to_login">Back to login</string>
    <string name="confirm_password">Confirm password</string>
    <string name="user_is_exists">Phone number already exists!</string>
    <string name="login_failed">Login Failed!</string>
    <string name="urgent">Urgent</string>
    <string name="normal">Normal</string>
    <string name="menu">Menu</string>
    <string name="orders">Orders</string>
    <string name="cart">Cart</string>
    <string name="offers">Offers</string>
    <string name="account">Account</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="all_categories">All Categories</string>
    <string name="total">Total</string>
    <string name="next">Next</string>
    <string name="item_added">Item aded</string>
    <string name="items_added">Items added</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="modify_item">Modify Item</string>
    <string name="cart_is_empty_when_you_place_an_order_your_item_show_here">Cart is empty when you place an order, \n your item show here</string>
    <string name="no_offers_to_show_n_offers_will_appear_here_soon">No offers to show \n offers will appear here soon</string>
    <string name="no_orders_to_show_n_offers_will_appear_here_soon">No past orders to show</string>
    <string name="your_order">Your Order</string>
    <string name="have_promo_code">Have promo code</string>
    <string name="add_promo_code">Add promo code</string>
    <string name="apply">Apply</string>
    <string name="sub_total">Sub total</string>
    <string name="payble_amount">Payble amount</string>
    <string name="service_fee">Service fee</string>
    <string name="select_a_table">Select a Table</string>
    <string name="add">Add</string>
    <string name="no_tables_avilable">No tables avilable</string>
    <string name="something_went_wrong">Something went wrong!</string>
    <string name="available">Available</string>
    <string name="reserved">Reserved By </string>
    <string name="discount">Discount</string>
    <string name="welcome">Welcome</string>
    <string name="submit">Submit</string>
    <string name="ready_to_pay">Ready to pay</string>
    <string name="exit">Exit</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="are_you_sure_want_to_exit">Are you sure you want to exit?</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="thank_you">THANK YOU</string>
    <string name="please_select_a_table">Please select a table number!</string>
    <string name="logout">Logout</string>
    <string name="please_fill_all_the_fields">Please fill all the fields!</string>
    <string name="past_orders">Past orders</string>
    <string name="order_id">Order Id</string>
    <string name="amount">Amount</string>
    <string name="date_time">Date time</string>
    <string name="order_details">Order Details</string>
    <string name="re_order">Add to cart to re-order</string>
    <string name="do_you_want_to_add_these_items_to_the_cart">"Do you want to add these items to the cart?  "</string>
    <string name="no">No</string>
    <string name="last_order_date">Last Order Date</string>
    <string name="profile">Profile</string>
    <string name="number_of_orders">Number of orders</string>
    <string name="password_confrimation_should_be_similer_to_the_password">Password confirmation should be similer to the password</string>
    <string name="no_items_available">No items available!</string>
    <string name="offer_desc">Offer desc</string>
    <string name="please_enter_the_correct_phone_number">Please enter the correct phone number!</string>
    <string name="pending">Pending</string>
    <string name="invoice">Invoice</string>
    <string name="quantity">Quantity</string>
    <string name="price">Price</string>
    <string name="you_have_reserved_another_table">You have reserved another table!</string>
    <string name="gross_amount">GROSS AMOUNT</string>
    <string name="net_amount">NET AMOUNT</string>
    <string name="you_can_not_logout">You can not logout, Please contact the cashier!</string>
    <string name="table_number">Table Number</string>
    <string name="number_of_seats">Number of seats</string>
</resources>
