<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_one"
    android:orientation="vertical"
    tools:context=".view.activity.OrderDetailsActivity">

    <TextView
        android:id="@+id/tvStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/half_margin"
        android:background="@color/transparent_black"
        android:fontFamily="@font/poppins_semibold"
        android:padding="10dp"
        android:text="@string/order_details"
        android:textColor="@color/white"
        android:textSize="@dimen/textview_large_2_size" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/transparent_black"
        android:gravity="center_vertical">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5">

            <Button
                android:id="@+id/btnReorder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/drawable_button_background"
                android:padding="5dp"
                android:text="@string/re_order"
                android:visibility="gone"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2.5"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="180dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="20dp"
                    android:gravity="left"
                    android:text="@string/gross_amount"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_ex_large" />

                <TextView
                    android:id="@+id/tvTotal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_ex_large" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="left"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="180dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="20dp"
                    android:gravity="left"
                    android:text="@string/discount"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_ex_large" />

                <TextView
                    android:id="@+id/tvDiscount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_ex_large" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="180dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="20dp"
                    android:gravity="left"
                    android:text="@string/net_amount"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_ex_large" />

                <TextView
                    android:id="@+id/tvNetAmount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_ex_large" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>